test/message/cjs_top_await_error.out
/*/test/message/cjs_top_await_error.js:3
await Promise.resolve();
^^^^^

SyntaxError: Top-Level await is only supported in ESM.
    at wrapSafe (internal/modules/cjs/loader.js:**:**)
    at Module._compile (internal/modules/cjs/loader.js:**:**)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:**:**)
    at Module.load (internal/modules/cjs/loader.js:**:**)
    at Function.Module._load (internal/modules/cjs/loader.js:**:**)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:**:**)
    at internal/main/run_main_module.js:**:**

