test/message/cjs_top_await_error.js
'use strict';

await Promise.resolve();

